correct contrast color var name

--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -13,8 +13,8 @@ $site-max-width: 1800px;
 
 $brand-main-color: #000;
 $brand-main-hover:  #000;
-$brand-constrast-color: #000;
-$brand-constrast-hover: #000;
+$brand-contrast-color: #000;
+$brand-contrast-hover: #000;
 
 
 // Colors
